# SM_tata_manufacturing_Supply_chain

./: .env.dist  README.md  conversation_memory.db  financebot.sqlite  long_term_memory.json  pyproject.toml  readme.md  test.ipynb  ui_app.py
Assets/: Corrective_RAG_Pattern.py  Query_Rewrite_Pattern.py  Self_reflective_rag_pattern.py  agentic_rag.py  chain_of_thought_rag.py  conversastion_summary_memory_rag.py  conversation_buffer_memory_pattern.py  conversation_buffer_sliding_window_rag.py  conversational_memory_knowledge_injection.py  entity_memory_rag.py  hybrid_rag.py  iterative_refinement_rag.py  long_term_memory_archives_rag.py  persistant_memory_sqlite_rag.py  self_consistency_rag.py  self_rag_pattern.py  simple_vanlia_rag_pattern.py
Experiment/: 3_rag_powered_tool_calling.ipynb  4_advanced_multi_step_reasoning.ipynb  bot_checkpointer.py  checkpoint.sqlite  financebot.sqlite-shm  financebot.sqlite-wal  human_in_the_loop.ipynb
Final_Project/: Final_project_readme.md  README.md  financial_bot.py  helpers.py  nodes.py  server.py  users.db  vis_grapgh.ipynb  visualize_graph.py
Final_Project/db/: memory.py  memory.sqlite
Final_Project/ui/: auth.py  main_app.py  stream_runner.py  views.py
RAG_pattens_docs/Memory_Rag_patterns/: memory_rag_patterns.md
TI/: CB5_Dashboard_proposal.html
scripts/: main.py  main_app.py
scripts/data_preparation/: download_data.py  ingest_data.py  qdrant_database_setup.py
sql_quries/: -- SQLite.sql
src/: embedding_setup.py  faiss_db_setup.py  faiss_vectorstore.py  format_llm_response.py  llm_setup.py
(+6 files in other folders)
