[project]
name = "rag-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "cryptography>=45.0.5",
    "faiss-cpu>=1.12.0",
    "google-search-results>=2.4.2",
    "grandalf>=0.8",
    "graphviz>=0.21",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.6",
    "openai>=1.97.1",
    "pypdf>=5.8.0",
    "pyppeteer>=0.0.25",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.0",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "streamlit>=1.49.1",
    "tavily-python>=0.7.11",
    "tqdm>=4.67.1",
    "urllib3>=2.5.0",
]
